fix scrollbar appearing without need

--- a/frontend/src/components/Home.module.scss
+++ b/frontend/src/components/Home.module.scss
@@ -24,7 +24,7 @@
   transition-duration: 0.25s;
   transition-property: transform;
   transition-timing-function: ease;
-  margin-top: var(--navbar-margin);
+  padding-top: var(--navbar-margin);
 }
 
 .form_centered {
